# logParser

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
headers/: application.h  backend.h  dashboard.h  parser.h  request.h
sources/: application.cpp  backend.cpp  dashboard.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  test.cpp
